fixed comment container div alignment

--- a/react-app/src/components/PostPage/postPage.css
+++ b/react-app/src/components/PostPage/postPage.css
@@ -1,21 +1,33 @@
 .post-page-container{
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
-    margin-top: 5%;
+    height: 100vh;
+    box-sizing: border-box;
+    width: 100%;
+    /* padding: 55px; */
+    /* margin-top: 10px; */
 }
 
 .post-page-box-main{
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 100%;
+    height: 660px;
+    box-sizing: border-box;
 }
 
 
 .post-page-footer{
-    margin-top: 10%;
+    /* margin-top: 20px; */
+    /* bottom: 0; */
 }
+
+/* .footer-about-container {
+
+} */
 
 .likes-text {
     color: rgba(255, 255, 255, 87%);
