--- a/react-app/src/components/SinglePostModal/singlePost.css
+++ b/react-app/src/components/SinglePostModal/singlePost.css
@@ -2,9 +2,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 654px;
-    width: 900px;
-
+    height: 690px;
+    box-sizing: border-box;
+    width: 100%;
+    padding: 5px;
 }
 
 .single-box-main {
@@ -12,24 +13,27 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 654px;
+    height: 660px;
+    box-sizing: border-box;
+    /* border: solid hotpink .5px; */
 }
-
 
 .post-comment-image {
     object-fit: fill;
-    width: 700px;
-    height: 652px;
+    width: 800px;
+    height: 100%;
     position: relative;
     overflow: hidden;
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
+    box-sizing: border-box;
 }
 
 .comment-container {
     display: flex;
     flex-direction: column;
-    height: 650px;
+    box-sizing: border-box;
+    height: 100%;
 }
 
 .comment-top {
